# env-guard

./: CHANGELOG.md  Makefile  README.md  cabal.project  env-guard.cabal  flake.nix  hie.yaml  stack.yaml  stack_lts-18.yaml  stack_nightly.yaml
.github/workflows/: cabal.yaml  cabal_8-10.yaml  cabal_9-0.yaml  cabal_9-2.yaml  ci.yaml  ghc_9-2.yaml  stack.yaml  stack_lts-18.yaml  stack_lts-19.yaml  stack_nightly.yaml  style.yaml  style_ci.yaml
nix/: stack.nix  stack_base.nix
src/System/Environment/: Guard.hs
src/System/Environment/Guard/: Lifted.hs
test/doctest/: Main.hs
tools/: haddock.sh
