cabal-version:      2.4
name:               env-guard
version:            0.2.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.4
   || ==9.10.1
   || ==9.12.1

copyright:          2022-2025 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/env-guard/
bug-reports:        https://github.com/tbidne/env-guard/issues
synopsis:
  Conditionally running IO actions based on environment variables.

description:
  This package provides functions for validating presence / contents of
  environment variables, and conditionally running IO actions based on the
  result.

category:           System, Environment
extra-source-files: README.md
extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/env-guard

library
  exposed-modules:
    System.Environment.Guard
    System.Environment.Guard.Lifted

  build-depends:    base >=4.14.0.0 && <4.22
  hs-source-dirs:   src
  default-language: Haskell2010
